- Modified HTTP verb associated with endpoints from GET to POST - Modified parameter passing from query parameters to raw body - Removed password parameter from endpoints - Added secret responsible for delegating encryption key to the service on startup

--- a/k8s/manifest.yaml
+++ b/k8s/manifest.yaml
@@ -17,7 +17,13 @@ spec:
         image: hardokkerdocker/hvalfangst:encryption-service
         ports:
         - containerPort: 5000
----        
+        env:
+          - name: ENCRYPTION_KEY
+            valueFrom:
+              secretKeyRef:
+                name: secrets
+                key: encryption-key
+---
 apiVersion: v1
 kind: Service
 metadata:
